manifests/readeck/readeck/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: readeck
  name: readeck-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: readeck
  template:
    metadata:
      labels:
        app: readeck
    spec:
      serviceAccountName: readeck-sa
      volumes:
      - name: etc-readeck
        configMap:
          name: readeck-cm
      containers:
      - image: codeberg.org/readeck/readeck:0.19.2
        name: readeck
        ports:
        - name: http
          containerPort: 8000
