manifests/readeck/readeck/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: readeck
  name: readeck-svc
spec:
  selector:
    app: readeck
  ports:
  - name: http
    port: 80
    targetPort: 8000
  type: ClusterIP
